--- a/How-to-FMI/app/css/style_2.css
+++ b/How-to-FMI/app/css/style_2.css
@@ -197,3 +197,51 @@ input[type=button]:hover {
 	margin:auto;
   	display:block;
 }
+
+/* ---------------- Horizontal slider ------------------ */
+
+input[type=range] {
+    /*removes default webkit styles*/
+    -webkit-appearance: none;    
+}
+
+input[type=range]::-webkit-slider-runnable-track {
+    height: 5px;
+    background: #ddd;
+    border-radius: 3px;
+}
+
+input[type=range]::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    height: 16px;
+    width: 16px;
+    border-radius: 50%;
+    background: goldenrod;
+    margin-top: -4px;
+}
+
+input[type=range]:focus {
+    outline: none;
+    opacity: .8;
+}
+
+
+input[type=range]::-moz-range-track {
+    width: 300px;
+    height: 5px;
+    background: #ddd;
+    border-radius: 3px;
+}
+
+input[type=range]::-moz-range-thumb {
+    height: 16px;
+    width: 16px;
+    border-radius: 50%;
+    background: goldenrod;
+}
+
+/*hide the outline behind the border*/
+input[type=range]::-moz-focusring{
+    outline: 1px solid white;
+    outline-offset: -1px;
+}
