--- a/How-to-FMI/app/views/register.html
+++ b/How-to-FMI/app/views/register.html
@@ -1,4 +1,4 @@
-<div ng-controller="RegisterController" class="register-div">
+<div class="register-div">
     <style>
         nav {
             display: none;
