--- a/How-to-FMI/app/views/students-info.html
+++ b/How-to-FMI/app/views/students-info.html
@@ -5,7 +5,7 @@
 		<div class="square-section col-md-5 col-sm-5 col-xs-11 col-xs-preset-1">
 			<h3>Бакалавърски програми</h3>
 			<div>
-				<ul ng-repeat="degree in bachelor_degrees">
+				<ul ng-repeat="degree in bachelorDegrees">
 					<li>{{ degree }}</li>
 				</ul>
 			</div>
