--- a/How-to-FMI/app/views/materials.html
+++ b/How-to-FMI/app/views/materials.html
@@ -1,5 +1,5 @@
 <div navigationpath></div>
-<div ng-controller="MaterialsController" class="materials-div">
+<div class="materials-div">
 	<h1>Материали</h1>
 	<div class="row">
 		<div class="col-sm-5 col-xs-11 col-xs-preset-1">
