--- a/How-to-FMI/app/views/login.html
+++ b/How-to-FMI/app/views/login.html
@@ -33,7 +33,8 @@
 
     function checkLoginState() {
         FB.getLoginStatus(function(response) {
-        console.log(response);
+          sessionStorage.setItem("loggedIn", response.status === 'connected');
+          location.reload();
         });
     }
     FB.XFBML.parse();
@@ -44,15 +45,15 @@
         <div class="mainView">
             <p id="login-errors"></p>
             <form id="login-form" class="login-column" ng-submit="login()">
-                <input type="text" ng-model="username" name="" id="">
-                <input type="password" ng-model="password" name="" id="">
+                <input type="text" ng-model="username" name="">
+                <input type="password" ng-model="password" name="">
                 <button ng-click="count = count + 1" ng-init="count=0">Вход</button>
                 <a href="">Възстановяване на парола</a>
             </form>
             <div>
                 <p>Влезте с ваш акаунт във:</p>
                 <div id="other-logins">
-                    <fb:login-button scope="public_profile,email" onlogin="checkLoginState();"></fb:login-button>
+                    <fb:login-button scope="public_profile,email" onlogin="checkLoginState()"></fb:login-button>
                     <!-- <span class="g-signin2" data-onsuccess="onSignIn" /> -->
                 </div>
             </div>
