Login and registration are both possible with and without facebook.
No validations are made though... :D

--- a/How-to-FMI/app/css/style_2.css
+++ b/How-to-FMI/app/css/style_2.css
@@ -12,6 +12,10 @@
 	margin-bottom: 20rem;
 }
 
+.error {
+	background-color: rgb(239, 64, 64);
+}
+
 .register-div  input {
 	width: 100%;
 }
@@ -38,7 +42,7 @@
 }
 
 input[type=text], input[type=password] {
-    
+
     padding: .5rem .75rem;
     margin-top: .7rem;
     margin-bottom: 0.7rem;
@@ -166,7 +170,7 @@ input[type=button]:hover {
 	flex-wrap: wrap;
 }
 
-.courses-div > .row > div , 
+.courses-div > .row > div ,
 .jobs-div > .row > div {
 	background-color: rgba(255,255,255,0.95);
 	border-radius: 2rem;
@@ -202,7 +206,7 @@ input[type=button]:hover {
 
 input[type=range] {
     /*removes default webkit styles*/
-    -webkit-appearance: none;    
+    -webkit-appearance: none;
 }
 
 input[type=range]::-webkit-slider-runnable-track {
