--- a/How-to-FMI/app/views/register.html
+++ b/How-to-FMI/app/views/register.html
@@ -1,21 +1,28 @@
-<div class="register-div">
+<div class="register-div" ng-class="{error: errorOnRegister}">
     <style>
         nav {
             display: none;
         }
     </style>
     <h1>Регистрация</h1>
-    
-    <form name="register-form" class="register-form">
-        <label for="username">Имейл/потребителско име: <span style="color: red">*</span></label>
-        <input name="username" type="text" placeholder="Имейл/потребителско име" autofocus required oninvalid="this.setCustomValidity('Полето е задължително.')" oninput="setCustomValidity('')">
+    <div ng-if="errorOnRegister">
+        {{errorOnRegister}}
+    </div>
+    <form name="register-form" class="register-form" ng-submit="registerUser()">
+        <label for="username">Имейл: <span style="color: red">*</span></label>
+        <input ng-model="email" name="username" type="text" placeholder="Имейл/потребителско име" autofocus required oninvalid="this.setCustomValidity('Полето е задължително.')" oninput="setCustomValidity('')">
 
         <label for="password">Парола: <span style="color: red">*</span></label>
-        <input name="password" type="password" placeholder="Парола" required oninvalid="this.setCustomValidity('Полето е задължително.')" aria-required="true" dir="auto" title oninput="setCustomValidity('')">
-        
+        <input ng-model="password" name="password" type="password" placeholder="Парола" required oninvalid="this.setCustomValidity('Полето е задължително.')" aria-required="true" dir="auto" title oninput="setCustomValidity('')">
+
         <label for="repetition">Повтори парола: <span style="color: red">*</span></label>
-        <input type="password" placeholder="Повтори парола" name="repetition" required oninvalid="this.setCustomValidity('Полето е задължително.')" oninput="setCustomValidity('')">
+        <input ng-model="password2" type="password" placeholder="Повтори парола" name="repetition" required oninvalid="this.setCustomValidity('Полето е задължително.')" oninput="setCustomValidity('')">
         <br>
         <input type="submit" value="Регистрация">
     </form>
+    <div>
+        <div ng-repeat="error in errors">
+            {{error}}
+        </div>
+    </div>
 </div>
