--- a/How-to-FMI/app/views/gradesMain.html
+++ b/How-to-FMI/app/views/gradesMain.html
@@ -1,10 +1,9 @@
 <div class="container mainView">
 
-    <div class="row">
+  <div class="row">
 
-        <div class="col-lg-12">
-            <h1 class="page-header">Оценки
-            </h1>
+      <div class="col-lg-12">
+          <h1 class="page-header">Оценки</h1>
   </div><!-- /.col-lg-6 -->
 
 
@@ -18,86 +17,41 @@
     <button ng-click="getGrades()">Вход</button>
 </form>
 
-  <h4><span class="label label-warning">2016-2017</span></h4>
-  <h4><span class="label label-primary">Зимен  семестър</span></h4>
-
+<div ng-repeat='sem in grades'>
+  <h4><span ng-if="$index == 0" class="label label-warning">2014-2015</span></h4>
+  <h4><span ng-if="$index == 1" class="label label-warning">2015-2016</span></h4>
+  <h4><span ng-if="$index == 2" class="label label-warning">2016-2017</span></h4>
+  <h4><span ng-if="$index == 3" class="label label-warning">2017-2018</span></h4>
   <table class="table table-striped table-bordered">
-    <thead>
-      <tr>
-        <th>Предмет</th>
-        <th>Преподавател</th>
-        <th>Вид</th>
-		<th>Оценка</th>
-		<th>Кредити</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td>Алгебра 1</td>
-        <td>доц. Пл. Сидеров</td>
-        <td>Задължителен</td>
-		<td>6.00</td>
-        <td>3</td>
-      </tr>
-      <tr>
-        <td>ДИС 1</td>
-        <td>доц. Вл. Бабев</td>
-        <td>Задължителен</td>
-		 <td>6.00</td>
-        <td>5</td>
-      </tr>
-      <tr>
-        <td>ДС 1</td>
-        <td>доц. Дичев</td>
-        <td>Задължителен</td>
-		 <td>6.00</td>
-        <td>2</td>
-      </tr>
+    <tr>
+      <th>Предмет</th>
+      <th>Преподавател</th>
+      <th>Вид</th>
+      <th>Оценка</th>
+      <th>Кредити</th>
+    </tr>
 
-	</tbody>
+      <tr ng-repeat="item in sem">
+        <td>{{ item.subject }}</td>
+        <td>{{ item.teacher }}</td>
+        <td>{{ item.type }}</td>
+        <td>{{ item.grade }}</td>
+        <td>{{ item.ECTS }}</td>
+      </tr>>
+
+    
   </table>
-  <br>
-  <h4><span class="label label-primary">Летен  семестър</span></h4>
+</div>>
 
-  <table class="table table-striped table-bordered">
-    <thead>
-	<thead>
-      <tr>
-        <th>Предмет</th>
-        <th>Преподавател</th>
-        <th>Вид</th>
-		<th>Оценка</th>
-		<th>Кредити</th>
-      </tr>
-    </thead>
-	</thead>
-	<tbody>
-      <tr>
-        <td>Алгебра 2</td>
-        <td>д-р. Пл. Сидеров</td>
-        <td>Задължителен</td>
-		<td>6.00</td>
-        <td>3</td>
-      </tr>
-      <tr>
-        <td>ДС 2</td>
-        <td>доц. Дичев</td>
-        <td>Задължителен</td>
-		<td>6.00</td>
-        <td>2</td>
-      </tr>
-      <tr>
-         <td>ДИС 2</td>
-        <td>доц. Дичев</td>
-        <td>Задължителен</td>
-		 <td>6.00</td>
-        <td>2</td>
-      </tr>
-    </tbody>
-  </table>
+<!-- <div class="progress">
+  <div class="progress-bar progress-bar-success progress-bar-striped" role="progressbar" aria-valuenow="40"
+  aria-valuemin="0" aria-valuemax="100" style="width:40%">
+    40% Complete (success)
+  </div>
+</div> -->
 
+<!-- <h4><span class="label label-warning">{{ getTotal() }}</span></h4> -->
 
-    </div>
 </div>
 
 <!-- /.container -->
