Add html rendering (ngSanitize)

--- a/How-to-FMI/app/css/style_2.css
+++ b/How-to-FMI/app/css/style_2.css
@@ -181,8 +181,13 @@ input[type=button]:hover {
 	padding-bottom: 1rem;
 }
 
+.single-course-div {
+	padding: 1rem;
+}
+
 .single-course-div:hover {
 	background-color: white;
+	border-radius: 2rem;
 }
 
 #filters > h4 {
