--- a/How-to-FMI/app/views/profile.html
+++ b/How-to-FMI/app/views/profile.html
@@ -39,7 +39,7 @@
 	</div>
 	<ul id="course-menu">
 		<li><button class="box" ng-click="changeCourseContent('profile')">Профил</button></li>
-		<li><a href="#!/moodle"><button>Интеграция с Мудъл</button></a></li>
+		<li><a href="#!/moodleintegration"><button>Интеграция с Мудъл</button></a></li>
 		<li><button class="box" ng-click="changeCourseContent('changePass')">Смяна на парола</button></li>
 		<li><a href="#!/grades"><button>Оценки</button></a></li>
 		<li><a href="#!/grades/electives"><button>Оценки на избираеми</button></a></li>
