--- a/How-to-FMI/app/views/home.html
+++ b/How-to-FMI/app/views/home.html
@@ -3,6 +3,7 @@
         <div id="notifications-box-home" class="mainView">
           <h1>Здравейте {{user.first_name || user.email }}! Това са вашите известия:</h1>
           <div ng-show="error">
+            <br><br>
             За да видите своите известия, интегрирайте профила си с Moodle:
             <a href="#!/moodleintegration">Интеграция с Moodle</a>
           </div>
@@ -12,9 +13,11 @@
               <a href="https://learn.fmi.uni-sofia.bg/mod/forum/discuss.php?d={{ discussion.discussion }}"><b> {{ discussion.name }} </b></a>
             </h4>
             <div class="single-course-div">
-              <span ng-bind-html="discussion.message" ></span> 
+              <span ng-bind-html="discussion.message" >...</span> 
             </div>
           </div>
+
+          <a href="#!/notifications" ng-show="!error">Още известия</a>
         </div>
         <aside id="aside-calendar" class="mainView">
           <h2>Предстоящи събития</h2>
